# mnodata-tee-poc

./: README.md
data-generator/: README.md  functional_urban_fingerprint_plot.py  generate_pseudonyms.py  generator.py  pseudonymisation.py  requirements.txt  test_sat.py  total_footprint_plot.py
data-generator/input/: brussels.csv
nsi-wrapper/: sharemind-hi-nsi
prototype/: README.md  analysis.py  circle_generator.py  entities.py  fingerprint_report_heatmap.py  fuf_report_heatmap.py  module_b.py  module_c.py  module_d.py  mypy.ini  parameters.py  requirements.txt  simple_generator.py  util.py
pseudonymisation-component/: README.md  create-package.sh  documentation.adoc  example.env  pseudonymisation.py  requirements.txt  run-dev.sh  run-prod.sh  server.py  test_api.py  wsgi.py
task-enclaves/: CMakeLists.txt  README.md  config.local.example
task-enclaves/src/analytics_enclave/: CMakeLists.txt  Comparison.h  DataFlow.adoc  Enclave.cpp  Entities.h  FullAnalysis.cpp  FullAnalysis.h  HiInternalApiDuplication.h  Indicators.h  Parameters.h  Pseudonymisation.cpp  Pseudonymisation.h  Seal.cpp  Seal.h  SgxEncryptedFile.cpp  SgxEncryptedFile.h  StreamAdditions.h  Xoroshiro.h  state_machine.drawio
task-enclaves/src/pseudonymisation_key_enclave/: CMakeLists.txt  Enclave.cpp  Entities.h
task-enclaves/test/: README.md  client-and-server.sh  common.sh  data-generator.py  dataflow-configuration-description.yaml  server.sh
task-enclaves/test/businesscycle/: callback.sh  client.sh  nd-dummy.sh  nsi-progress-report-0  vad-progress-report-0  vad-progress-report-1  vad-progress-report-10  vad-progress-report-11  vad-progress-report-12  vad-progress-report-13  vad-progress-report-14  vad-progress-report-15  vad-progress-report-16  vad-progress-report-2  vad-progress-report-3  vad-progress-report-4  vad-progress-report-5  vad-progress-report-6  vad-progress-report-7  vad-progress-report-8  vad-progress-report-9
task-enclaves/test/performance/: client.sh  generate_pseudonyms.c
task-enclaves/unit-test/: CMakeLists.txt  UnitTest.cpp
vad-wrapper/: sharemind-hi-vad
